iptables-save
# Generated by iptables-save v1.4.8 on Tue Sep 24 19:42:28 2013
*nat
:PREROUTING ACCEPT [67790786:4530211911]
:POSTROUTING ACCEPT [270006004:19909334712]
:OUTPUT ACCEPT [270005974:19909331878]
-A PREROUTING -d 202.141.160.99/32 -i eth0 -p tcp -m tcp --dport 20080 -j DNAT --to-destination 202.38.70.100:30010 
-A PREROUTING -d 202.141.160.99/32 -i eth0 -p tcp -m tcp --dport 20022 -j DNAT --to-destination 202.38.70.100:20010 
-A PREROUTING -d 202.141.160.99/32 -i eth0 -p tcp -m tcp --dport 20021 -j DNAT --to-destination 202.38.70.100:30021 
-A PREROUTING -d 202.141.160.99/32 -i eth0 -p tcp -m tcp --dport 20020 -j DNAT --to-destination 202.38.70.100:30020 
-A PREROUTING -d 202.141.160.99/32 -i eth0 -p tcp -m tcp --dport 25000:25099 -j DNAT --to-destination 202.38.70.100 
-A PREROUTING -d 202.141.160.99/32 -i eth0 -p tcp -m tcp --dport 20443 -j DNAT --to-destination 202.38.70.100:30443 
-A POSTROUTING -s 192.168.100.0/24 -o eth0 -j MASQUERADE 
-A POSTROUTING -d 202.38.70.100/32 -p tcp -m tcp --dport 20010 -j SNAT --to-source 202.141.160.99 
-A POSTROUTING -d 202.38.70.100/32 -p tcp -m tcp --dport 30010 -j SNAT --to-source 202.141.160.99 
-A POSTROUTING -d 202.38.70.100/32 -p tcp -m tcp --dport 30020 -j SNAT --to-source 202.141.160.99 
-A POSTROUTING -d 202.38.70.100/32 -p tcp -m tcp --dport 30021 -j SNAT --to-source 202.141.160.99 
-A POSTROUTING -d 202.38.70.100/32 -p tcp -m tcp --dport 25000:25099 -j SNAT --to-source 202.141.160.99 
-A POSTROUTING -d 202.38.70.100/32 -p tcp -m tcp --dport 30443 -j SNAT --to-source 202.141.160.99 
-A POSTROUTING -s 10.8.0.0/16 -o eth0 -j SNAT --to-source 202.141.160.99 
-A POSTROUTING -s 10.8.0.0/16 -o eth1 -j SNAT --to-source 202.141.176.99 
-A POSTROUTING -s 10.8.0.0/16 -o tun_azure -j SNAT --to-source 10.9.0.10
-A POSTROUTING -s 10.8.0.0/16 -o tunipip -j SNAT --to-source 10.38.160.99
-A POSTROUTING -s 10.7.0.0/16 -o eth0 -j SNAT --to-source 202.141.160.99 
-A POSTROUTING -s 10.7.0.0/16 -o eth1 -j SNAT --to-source 202.141.176.99 
-A POSTROUTING -s 10.7.0.0/16 -o tun_azure -j SNAT --to-source 10.9.0.10
-A POSTROUTING -s 10.7.0.0/16 -o tunipip -j SNAT --to-source 10.38.160.99
COMMIT
# Completed on Tue Sep 24 19:42:29 2013
# Generated by iptables-save v1.4.8 on Tue Sep 24 19:42:29 2013
*mangle
:PREROUTING ACCEPT [1395943703:383120211352]
:INPUT ACCEPT [1173408689:292306974431]
:FORWARD ACCEPT [222534435:90813199235]
:OUTPUT ACCEPT [1206404418:288429478368]
:POSTROUTING ACCEPT [1430102997:379324937869]
COMMIT
# Completed on Tue Sep 24 19:42:29 2013
# Generated by iptables-save v1.4.8 on Tue Sep 24 19:42:29 2013
*filter
:INPUT ACCEPT [2685640:343153689]
:FORWARD ACCEPT [290849:105882246]
:OUTPUT ACCEPT [2628325:6459303323]
:fail2ban-ssh - [0:0]
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh 
-A fail2ban-ssh -j RETURN 
COMMIT
# Completed on Tue Sep 24 19:42:29 2013
